Upgrade libcore/junit classes to their JUnit4.10 implementation.
Bug 5826326

Change-Id: Iddb8b8ed7b056d705375a2d458c26ba83fc07d7f